--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>My First Task</title>
 </head>
 <body>
     <div class="container">
-        <h1 data-testid="slackUserName">Osuji Kachie</h1>
-        <img src="slack-profile-picture.jpg" alt="Osuji Kachie" data-testid="slackDisplayImage">
-        <p data-testid="currentDayOfTheWeek">Current Day of the Week: <span id="dayOfWeek"></span></p>
-        <p data-testid="currentUTCTime">Current UTC Time: <span id="utcTime"></span></p>
-        <p data-testid="myTrack">Track: Frontend</p>
-        <a href="https://github.com/your-username/your-repository" data-testid="githubURL">GitHub Repository</a>
+        <div class="row">
+            <div class="col-1">
+            <img src="/image/profile-pic2.JPG" alt="Osuji Kachie" data-testid="slackDisplayImage">
+            </div>
+            <div class="col-2">
+                <h1 data-testid="slackUserName">Osuji Kachie</h1>
+            </div>
+        </div>
+        <div>
+            <p data-testid="currentDayOfTheWeek">Current Day of the Week: <span id="dayOfWeek"></span></p>
+            <p data-testid="currentUTCTime">Current UTC Time: <span id="utcTime"></span></p>
+            <p data-testid="myTrack">Track: Frontend</p>
+            <a href="https://github.com/Khaybee/stage1-task_one" target="_blank" data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a>
+        </div>
     </div>
+
+    <script src="java.js"></script>
 </body>
 </html>
