--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-1">
             <img src="/image/profile-pic2.JPG" alt="kachie" data-testid="slackDisplayImage">
-            </div>
-            <div class="col-2">
-                <h1 data-testid="slackUserName">Osuji Kachie</h1>
-            </div>
-        </div>
-        <div>
+            <h1 data-testid="slackUserName">Osuji Kachie</h1>
             <p data-testid="currentDayOfTheWeek">Current Day of the Week: <span id="dayOfWeek"></span></p>
             <p data-testid="currentUTCTime">Current UTC Time: <span id="utcTime"></span></p>
             <p data-testid="myTrack">Track: Frontend</p>
             <p>GitHub URL: <a href="https://github.com/Khaybee/stage1-task_one" target="_blank" data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a></p>
-        </div>
     </div>
 
-    <script src="java.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
