--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-            <img src="/image/profile-pic2.JPG" alt="kachie" data-testid="slackDisplayImage">
+            <img src="/image/profile-pic2.JPG" alt="Osuji Kachie" data-testid="slackDisplayImage">
             <h1 data-testid="slackUserName">Osuji Kachie</h1>
-            <p data-testid="currentDayOfTheWeek">Current Day of the Week: <span id="dayOfWeek"></span></p>
-            <p data-testid="currentUTCTime">Current UTC Time: <span id="utcTime"></span></p>
-            <p data-testid="myTrack">Track: Frontend</p>
-            <p>GitHub URL: <a href="https://github.com/Khaybee/stage1-task_one" target="_blank" data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a></p>
+            <p data-testid="currentDayOfTheWeek"><span id="dayOfWeek"></span></p>
+            <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
+            <p data-testid="myTrack">Frontend</p>
+            <p><a href="https://github.com/Khaybee/stage1-task_one" target="_blank" data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a></p>
     </div>
 
     <script src="script.js"></script>
