--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>My First Task</title>
 </head>
+
 <body>
     <div class="container">
-            <img src="/image/profile-pic2.JPG" alt="Osuji Kachie" data-testid="slackDisplayImage">
-            <h1 data-testid="slackUserName">Osuji Kachie</h1>
-            <p data-testid="currentDayOfTheWeek"><span id="dayOfWeek"></span></p>
-            <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
-            <p data-testid="myTrack">Frontend</p>
-            <p><a href="https://github.com/Khaybee/stage1-task_one" target="_blank" data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a></p>
+        <img src="https://ca.slack-edge.com/T05FFAA91JP-U05RA2WN36F-52e633a11921-512" alt="Osuji Kachie"
+            data-testid="slackDisplayImage">
+        <h1 data-testid="slackUserName">Osuji Kachie</h1>
+        <p data-testid="currentDayOfTheWeek"><span id="dayOfWeek"></span></p>
+        <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
+        <p data-testid="myTrack">Frontend</p>
+        <p><a href="https://github.com/Khaybee/stage1-task_one" target="_blank"
+                data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a></p>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
