--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
         <p data-testid="myTrack">Frontend</p>
         <p><a href="https://github.com/Khaybee/stage1-task_one" target="_blank"
-                data-testid="githubURL">https://github.com/Khaybee/stage1-task_one</a></p>
+                data-testid="githubURL">Go To GitHub</a></p>
     </div>
 
     <script src="script.js"></script>
