--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 data-testid="slackUserName">Osuji Kachie</h1>
         <p data-testid="currentDayOfTheWeek"><span id="dayOfWeek"></span></p>
         <p data-testid="currentUTCTime"><span id="utcTime"></span></p>
-        <p data-testid="myTrack">Frontend</p>
+        <p data-testid="myTrack">Track: Frontend</p>
         <p><a href="https://github.com/Khaybee/stage1-task_one" target="_blank"
                 data-testid="githubURL">Go To GitHub</a></p>
     </div>
